--- a/src/libs/readme
+++ b/src/libs/readme
@@ -26,3 +26,7 @@ https://www.npmjs.com/package/verror
 SQL
 https://www.npmjs.com/package/sql-highlight
 https://marketplace.visualstudio.com/items?itemName=frigus02.vscode-sql-tagged-template-literals
+
+- IMAGES
+  Sharp
+  Jimp
