--- a/readme
+++ b/readme
@@ -1,13 +1,7 @@
-- add in db
-  alias
-  adjective
-  IPODate
-  ticker
-  businessSector
-  businessIndustry
+https://devhints.io/express
 
-- images sources
-  lorempicsum
-  lorempixel
-  placeholder
-  unsplash
+lorempicsum
+lorempixel
+placeholder
+unsplash
+loremflickr
